--- a/CanineDuo_Development_Windbearer/Game/Game.vcxproj.filters
+++ b/CanineDuo_Development_Windbearer/Game/Game.vcxproj.filters
@@ -25,6 +25,10 @@
     <ClCompile Include="Source\SceneTitle.cpp" />
     <ClCompile Include="Source\SceneEnding.cpp" />
     <ClCompile Include="Source\Fonts.cpp" />
+    <ClCompile Include="Source\PathFinding.cpp" />
+    <ClCompile Include="Source\Enemy.cpp" />
+    <ClCompile Include="Source\Timer.cpp" />
+    <ClCompile Include="Source\PerfTimer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Window.h" />
@@ -76,6 +80,13 @@
     <ClInclude Include="Source\SceneTitle.h" />
     <ClInclude Include="Source\SceneEnding.h" />
     <ClInclude Include="Source\Fonts.h" />
+    <ClInclude Include="Source\PathFinding.h" />
+    <ClInclude Include="Source\Enemy.h" />
+    <ClInclude Include="Source\PQueue.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Timer.h" />
+    <ClInclude Include="Source\PerfTimer.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="External">
