Fixed gitignore and deleted libs

--- a/CanineDuo_Development_Windbearer/.gitignore
+++ b/CanineDuo_Development_Windbearer/.gitignore
@@ -28,10 +28,13 @@
 !Game/Source/External/SDL/libx86/SDL2main.lib
 !Game/Source/External/SDL_image/libx86/SDL2_image.lib
 !Game/Source/External/SDL_mixer/libx86/SDL2_mixer.lib
+!Game/Source/External/SDL_ttf/libx86/SDL2_ttf.lib
 !Game/Source/External/Box2D/libx86/DebugLib/Box2D.lib
 !Game/Source/External/Box2D/libx86/DebugLib/Box2D.pdb
 !Game/Source/External/Box2D/libx86/ReleaseLib/Box2D.lib
 !Game/Source/External/Box2D/libx86/ReleaseLib/Box2D.pdb
+!Game/Source/External/Optick/lib/debugLib/OptickCore.lib
+!Game/Source/External/Optick/lib/releaseLib/OptickCore.lib
 
 # Executables
 *.exe
